--- a/fake-project/fake-ejb/pom.xml
+++ b/fake-project/fake-ejb/pom.xml
@@ -11,4 +11,11 @@
 	<artifactId>fake-ejb</artifactId>
 	<packaging>ejb</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+        </dependency>
+    </dependencies>
+        
 </project>
